--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "i18next": "^25.2.1",
     "react": "^19.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
